# intent-engine

./: .env.example  .gitignore  .gitmessage  .pre-commit-config.yaml  ARCHITECTURE_BLUEPRINT.md  BUILD_TEST_REPORT.md  CHANGELOG_v2.md  COMPREHENSIVE_GUIDE.md  CONFIGURATION_CHANGES.md  CONTRIBUTING.md  DEPLOYMENT_SUMMARY.md  Dockerfile  Dockerfile.aio  INDEX.md  Intent-Engine-Tech-Reference.md  Intent-Engine-Visual-Guide.md  Intent-Engine-Whitepaper.md  LICENSE  Makefile  PARENT_DIRECTORY_GUIDE.md  PROJECT_OVERVIEW.md  QWEN.md  README.md  RELIABLE_TOPIC_DISCOVERY.md  SEED_DISCOVERY_README.md  STRESS_TEST_ANALYSIS.md  STRESS_TEST_REPORT.md  TESTING_PLAN.md  __init__.py  __version__.py  autopush.py  benchmark.py  benchmark_results_20260314_094220.json  benchmark_results_20260314_095112.json  build_and_push.bat  build_and_push.sh  bump_version.py  check_db_schema.py  check_model.py  commit-gen.py  (+31 more)
.github/workflows/: auto-version.yml  ci.yml  pylint.yml  release.yml
abtesting/: __init__.py  service.py
ads/: matcher.py
analytics/: advanced.py  kafka_events.py  realtime.py
audit/: audit_trail.py
config/: __init__.py  hybrid_cache.py  hybrid_query_cache.py  model_cache.py  optimized_cache.py  query_cache.py  redis_cache.py  tracing.py
core/: embedding_service.py  exceptions.py  schema.py  utils.py  vector_store.py
demos/: demo_ad.py  demo_phase1_unified_search.py  demo_ranking.py  demo_search.py  demo_searxng_ranking.py  demo_service.py
docker/: aio-entrypoint.sh  nginx-aio.conf
docs/: COMPREHENSIVE_GUIDE.md  CONFIGURATION_CHANGES.md  INTEGRATION_GUIDE.md  Intent-Engine-Tech-Reference.md  Intent-Engine-Visual-Guide.md  Intent-Engine-Whitepaper.md  ORGANIZATION.md  PARENT_DIRECTORY_GUIDE.md  PROJECT_OVERVIEW.md  PROJECT_STRUCTURE.md  README.md  STRESS_TEST_ANALYSIS.md  TESTING_GUIDE.md  VERSIONING.md
docs/architecture/: Intent-Engine-Whitepaper.md  PROJECT_OVERVIEW.md  PROJECT_STRUCTURE.md  SELF_IMPROVING_LOOP.md
docs/deployment/: CI_IMPROVEMENTS.md  DEPLOYMENT_CHECKLIST.md  DOCKER_COMPOSE_TEST_RESULTS.md  IMPLEMENTATION_GUIDE.md  PERFORMANCE_OPTIMIZATION_PLAN.md  RELEASE_AUTOMATION.md
docs/getting-started/: PHASE1_README.md  QUICKSTART.md  QUICK_REFERENCE.md  README_PRODUCTION.md  README_PRODUCTION_FULL.md
docs/go-crawler/: BUG_FIXES.md  CRAWLER_TEST_RESULTS.md  DOCKER_TEST_RESULTS.md  FILE_REFERENCE.md  GO_CRAWLER_INDEXER_PLAN.md  GO_CRAWLER_SETUP_GUIDE.md  INTENT_INDEXER_README.md  PHASE_1_IMPLEMENTATION.md  QUICKSTART.md  README.md  README_PRODUCTION.md
docs/reference/: PARENT_DIRECTORY_GUIDE.md  VERSIONING_AND_RELEASES.md
extraction/: constraints.py  extractor.py  web_extractor.py
fraud/: __init__.py  detector.py
go-crawler/: .gitignore  Makefile  config.example.yaml  crawler-config.yaml  docker-compose.yml  go.mod  go.sum
go-crawler/cmd/crawler/: main.go
go-crawler/cmd/indexer/: main.go
go-crawler/cmd/pagerank/: main.go
go-crawler/cmd/search-api/: main.go
go-crawler/cmd/unified-search/: main.go
go-crawler/deployments/: Dockerfile.api  Dockerfile.crawler  Dockerfile.indexer  Dockerfile.pagerank  Dockerfile.unified-search  init-db.sql  prometheus.yml
go-crawler/integration/: python_integration.py
go-crawler/internal/crawler/: collector.go  config.go
go-crawler/internal/frontier/: queue.go
go-crawler/internal/indexer/: bleve.go  bleve_test.go
go-crawler/internal/pagerank/: calculator.go
go-crawler/internal/storage/: storage.go
go-crawler/migrations/: 001_create_crawler_tables.sql  fix_schema.sql
go-crawler/pkg/indexer/: intent_indexer.go  intent_indexer_test.go  worker.go
go-crawler/pkg/intent/: analyzer.go  analyzer_test.go  schema.go
go-crawler/pkg/models/: models.go
go-crawler/scripts/: start_crawler.ps1  start_crawler.sh
grafana/dashboards/: intent_engine_overview.json
grafana/provisioning/dashboards/: dashboard.yml
grafana/provisioning/datasources/: datasources.yml
load_testing/: __init__.py  comprehensive_stress_test.py  database_stress_test.py  locustfile.py  search_engine_stress_test.py  stress_test.py
migrations/: 001_create_missing_tables.sql  002_fix_click_tracking.sql  003_fix_conversion_fraud.sql  004_fix_ab_tests.sql
perf_tests/: perf_test_ad.py  perf_test_extractor.py  perf_test_ranker.py  perf_test_service.py
pgbouncer/: pgbouncer.ini  userlist.txt
privacy/: __init__.py  consent_manager.py  enhanced_privacy.py
ranking/: optimized_ranker.py  optimized_url_ranker.py  ranker.py  scoring.py  url_ranker.py
scripts/: TEST_SUITE_README.md  __init__.py  api_examples.ps1  api_examples.sh  benchmark_unified_search.py  check_db_status.py  clear_db.py  commit.py  init_db.py  init_db_standalone.py  install_hooks.py  production_start.ps1  production_start.sh  read_seed.py  run_migrations.sh  seed_data.py  seed_sample_data.py  setup_git_hooks.py  start_production.ps1  start_production.sh  stress_test_all.py  test_all_compose.ps1  test_all_compose.sh  test_api_docker.sh  verify_api_routes.py  verify_production_setup.sh  verify_setup.ps1  verify_setup.sh
searxng/: __init__.py  client.py  query_router.py  result_aggregator.py  scheduled_seed_discovery.py  seed_discovery.py  seed_injector.py  seed_url_manager.py  settings.yml  topic_expander.py  unified_search.py
services/: recommender.py
tests/: api_integration_test.py  comprehensive_test.py  test_ads.py  test_advertising_api.py  test_comprehensive_queries.py  test_extraction.py  test_ranking.py  test_services.py  test_url_ranking.py  test_url_ranking_api.py
