[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "intent-engine"
version = "2.0.0"
description = "A privacy-first, intent-driven advertising platform for search, service recommendation, and ad matching"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "itxLikhith", email = "likhith.anony45@gmail.com" }
]
maintainers = [
    { name = "itxLikhith", email = "likhith.anony45@gmail.com" }
]
keywords = [
    "intent-recognition",
    "privacy-first",
    "advertising",
    "search-engine",
    "recommendation-system",
    "fastapi",
    "nlp",
    "machine-learning",
    "gdpr-compliant"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Application",
    "Typing :: Typed",
]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0,<1.0.0",
    "uvicorn[standard]>=0.24.0,<1.0.0",
    "sqlalchemy>=2.0.23,<3.0.0",
    "pydantic>=2.5.0,<3.0.0",
    "pydantic-settings>=2.1.0,<3.0.0",
    "psycopg2-binary>=2.9.9,<3.0.0",
    "asyncpg>=0.29.0,<1.0.0",
    "aiosqlite>=0.19.0,<1.0.0",
    "sentence-transformers>=2.2.2,<3.0.0",
    "transformers>=4.35.2,<5.0.0",
    "torch>=2.1.1,<3.0.0",
    "numpy>=1.24.3,<2.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "prometheus-client>=0.19.0,<1.0.0",
    "apscheduler>=3.10.4,<4.0.0",
    "python-multipart>=0.0.6,<1.0.0",
    "passlib[bcrypt]>=1.7.4,<2.0.0",
    "python-jose[cryptography]>=3.3.0,<4.0.0",
    "aiofiles>=23.2.1,<24.0.0",
    "requests>=2.31.0,<3.0.0",
    "websockets>=11.0.3,<12.0.0",
    "httpx[http2]>=0.25.2,<1.0.0",
    "redis>=5.0.1,<6.0.0",
    "slowapi>=0.1.9,<1.0.0",
    "limits>=3.6.0,<4.0.0",
    "arq>=0.25.0,<1.0.0",
    "dataclasses-json>=0.6.4,<1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "pytest-xdist>=3.3.0",
    "pytest-watch>=4.2.0",
    "ruff>=0.1.14",
    "pre-commit>=3.5.0",
    "bandit>=1.7.5",
    "safety>=2.3.0",
    "mypy>=1.7.0",
    "commitizen>=3.13.0",
    "locust>=2.20.0",
]

docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.24.0",
    "mkdocs-gen-files>=0.5.0",
]

monitoring = [
    "prometheus-client>=0.19.0",
    "grafana-api>=1.0.0",
]

all = [
    "intent-engine[dev,docs,monitoring]",
]

[project.urls]
Homepage = "https://github.com/itxLikhith/intent-engine"
Documentation = "https://github.com/itxLikhith/intent-engine#readme"
Repository = "https://github.com/itxLikhith/intent-engine.git"
Issues = "https://github.com/itxLikhith/intent-engine/issues"
Changelog = "https://github.com/itxLikhith/intent-engine/blob/main/CHANGELOG.md"

[project.scripts]
intent-engine = "main:main"
intent-api = "main_api:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["*", "abtesting.*", "ads.*", "analytics.*", "audit.*", "config.*", "core.*", "demos.*", "extraction.*", "fraud.*", "load_testing.*", "migrations.*", "perf_tests.*", "privacy.*", "ranking.*", "searxng.*", "services.*", "tests.*"]
exclude = ["venv*", ".venv*", "env*", "ENV*", "build*", "dist*", "*.egg-info"]

[tool.setuptools.package-data]
"*" = ["*.sql", "*.yml", "*.yaml", "*.json", "*.md"]
"searxng" = ["*.yml"]
"migrations" = ["*.sql"]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_scheme = "semver"
version_provider = "pep621"
update_changelog_on_bump = true
major_version_zero = true
changelog_file = "CHANGELOG.md"
changelog_incremental = true
changelog_start_version = "0.1.0"
version_files = [
    "__init__.py:__version__",
    "__version__.py:__version__",
    "README.md:version-",
    "README.md:v"
]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*", "*Test"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "-ra",
    "-q",
    "--cov=.",
    "--cov-report=term-missing",
    "--cov-report=html",
]
filterwarnings = [
    "ignore::DeprecationWarning:pydantic.*",
    "ignore::PendingDeprecationWarning:starlette.*",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "e2e: marks tests as end-to-end tests",
]

[tool.coverage.run]
source = ["."]
omit = [
    "tests/*",
    "venv/*",
    ".venv/*",
    "env/*",
    "*/migrations/*",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.ruff]
line-length = 120
target-version = "py311"
extend-exclude = [
    "venv",
    ".venv",
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".mypy_cache",
    ".ruff_cache",
    ".pytest_cache",
    "*.egg-info",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort (import sorting)
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
]
fixable = ["ALL"]
unfixable = []
ignore = [
    "N",      # pep8-naming (too strict for existing codebase)
    "B011",   # assert false (allowed in tests)
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**" = ["E501", "B011", "S101"]
"demos/**" = ["E501"]
"load_testing/**" = ["E501"]
"perf_tests/**" = ["E501"]
"scripts/**" = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
disallow_untyped_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
exclude = [
    "venv/",
    ".venv/",
    "build/",
    "dist/",
    "tests/",
    "demos/",
    "load_testing/",
    "perf_tests/",
]

[tool.bandit]
exclude_dirs = ["tests", "venv", ".venv", "build", "dist"]
skips = ["B101"]  # Skip assert warnings

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip = ["venv", ".venv", "build", "dist", "__pycache__"]

[tool.black]
line-length = 120
target-version = ["py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.pytest_cache
  | \.ruff_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | venv
)/
'''
